Align validation error response format with frontend
  - Create ApiValidationError class for structured error representation
  - Update GlobalExceptionHandler to use 'violations' array instead of 'errors' map
  - Modify handleMethodArgumentNotValidException to return violations with field/message structure
  - Update handleDomainValidationException for consistency with violations format
  - Remove unused imports (Map, Collectors)

  This ensures frontend error parser can correctly parse validation errors
  expecting properties.violations array with field and message properties.